# Course_Management_System

backend/: Cargo.toml  diesel.toml
backend/migrations/2025-03-03-160529_create_courses/: up.sql
backend/src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
frontend/src/: App.js
frontend/src/components/: CourseManager.js
